k8s/client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment
spec:
  replicas: 3
  selector: # How to get a handle on newly created pod(s) to manage them
    matchLabels:
      component: web
  template: # This section similar to yaml for pod
    metadata:
      labels:
        component: web # How to find/identify these containers
    spec:
      containers:
        - name: client
          image: stephengrider/multi-client
          ports:
            - containerPort: 3000
