k8s/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-deployment
spec:
  replicas: 3
  selector: # How to get a handle on newly created pod(s) to manage them
    matchLabels:
      component: server
  template: # This section similar to yaml for pod
    metadata:
      labels:
        component: server # How to find/identify these containers
    spec:
      containers:
        - name: server
          image: cygnetops/multi-server-pgfix-5-11
          ports:
            - containerPort: 5000
