k8s/worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-deployment
spec:
  replicas: 1
  selector: # How to get a handle on newly created pod(s) to manage them
    matchLabels:
      component: worker
  template: # This section similar to yaml for pod
    metadata:
      labels:
        component: worker # How to find/identify these containers
    spec:
      containers:
        - name: worker
          image: stephengrider/multi-worker
