k8s/redis-cluster-ip_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-cluster-ip-service
spec:
  type: ClusterIP
  selector: # How to get a handle on pod(s) to manage them
    component: redis
  ports:
    - port: 6379 # What to access on
      targetPort: 6379 # What will be forwarded onto container
